Fixed z-index issues

--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -11,19 +11,20 @@
 
 .main {
     padding:60px;
-    padding-top:80px;
     width:100%;
     height:100vh;
     display:flex;
-    justify-content: space-between;
-    z-index: -2;
 }
 
 .text {
     position:relative;
     max-width: 600px;
     margin-left: 5%;
-    z-index: -1;
+}
+
+.behind {
+  position: relative;
+  z-index: -1;
 }
 
 h3 {
@@ -93,28 +94,35 @@ ul li {
   -webkit-user-select: none;
   vertical-align: middle;
   white-space: nowrap;
+  position: relative;
+  z-index: 3;
 }
 
 .button:focus {
   text-decoration: none;
+  position: relative;
 }
 
 .button:hover {
   text-decoration: none;
+  position: relative;
 }
 
 .button:active {
   box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
   outline: 0;
+  position: relative;
 }
 
 .button:not([disabled]):active {
   box-shadow: white 2px 2px 0 0, white 2px 2px 0 1px;
   transform: translate(2px, 2px);
+  position: relative;
 }
 
 @media (min-width: 768px) {
   .button {
     padding: 12px 50px;
+    position: relative;
   }
 }
